tests/parsing/smtlib/v2.6/errors/129_constructor_dec_bad_name_1.smt2
(set-logic ALL)
(declare-datatype foo ((_)))
